--- a/BubbleDrop/AndroidManifest.xml
+++ b/BubbleDrop/AndroidManifest.xml
@@ -12,20 +12,21 @@
               android:required="true" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:name="com.webs.potential_software.bubbledrop.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:debuggable="true"
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
+            <activity
+                android:configChanges="orientation"
+                android:screenOrientation="portrait"
+                android:name="com.webs.potential_software.bubbledrop.MainActivity"
+                android:label="@string/app_name" >
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+            </activity>
     </application>
 
 </manifest>
